Continuing styling.  Added fix that resolves issues with scrollbars always being shown on phone sized views.

--- a/css/main.css
+++ b/css/main.css
@@ -34,4 +34,3 @@
 
 h1{color:#0000ff; font-size:16px;font-weight:bold;font-family:sans-serif;}
 .nav-right{float:right;}
-#competency{min-width:50px;}
